@@ -1,0 +1,25 @@
+PEER A
+  OUT m1;
+
+PEER B
+  IN m1;
+  OUT m2;
+
+PEER C
+  IN m2;
+  OUT m3;
+
+PEER D
+  IN m3;
+
+NODES
+  1 : INITIAL
+    #m1 -> 2
+  2
+    #m2 -> 3
+    #m3 -> 4
+  3
+    #m3 -> 5
+  4
+    #m2 -> 5
+  5 : FINAL
